helloworld/gateway/app/hello_spring/hello_spring_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-spring-http-route
  namespace: hello
spec:
  parentRefs:
  - name: hello-gateway
    namespace: hello
  hostnames: ["api.play-helloworld.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1
    - path:
        type: PathPrefix
        value: /api/v2
    backendRefs:
    - name: hello-spring-svc
      port: 8080
